		* Cleaner solution to RLB: Accept() the connection and
		  Destroy() the socket immediately.
		* Fixed a lot of bugs in amuleweb. In particular, stop / pause
		  / cancel / priority(up/down) now works.
		* Removed bubble sort code in download queue from amuleweb.
		  This code did not scale for large number of files, like
		  hundreds. There is still room for improovement here.

	rommel:
		* Patch to implement the commands serverconnect and reloadipf
		  in amulecmd.

	ThePolish:
		* i18n amule log lines (server window)
		* amulecmd and webinterface i18n fixes
		* Some win32 fixes (slashes and backslashes)
		* Automake 1.8 fixes
		* Add traditionnal Chinese translation (zh_TW) from Paul (Thanks !)
		* Add it, nl, fr, pl, es, eu, ca translation updates (Thanks to all translators)
		* Fix copyright for alc icons
		* Replace amule, wxCas, alc .ico simple icons by icons group .ico
		* Replace alcc's printf by wxLogMassage
		* Make runtime to be in seconds in amulesig.dat
		* Modify Xas to handle runtime in seconds
		* Modify wxCas to handle runtime in seconds
		
	Xaignar:
		* Rewrote the file-hashing thread for greater flexibility and better error-handling.
		* Imported the parts of Crypto++ needed by aMule, which means that no external Crypto++ libs are needed anymore.
		* Reworked the systray dialog and fixed the rate-limit bugs associated with it.
		* Fixed the inverted priority bug in the download queue which caused low-priority files to get connections before high-priority files.
		* A number of other smaller bugfixes and improvements.
		
		
	Special Thanks To:
		Lucasvr, for providing fixes for compilation with some wx versions.
		

Version 2.0.0rc5 - The 'Let's recover our release speed' version.
----------
2004-07-18

	deltaHF:
	        * Better sorting of some columns

	Kry:
		* Some gui design and coding of the upcoming Kad window
		* Protocol update:
			* UDP protocol upgraded to eMule 0.43b
			* TCP Standard Base protocol upgraded to eMule 0.43b